#376 Bug: page alignments
git-svn-id: https://mycognitive.unfuddle.com/svn/mycognitive_arts/trunk@473 2260b2a0-9455-4d21-9559-270ed330a898

--- a/sites/all/themes/saw/style.css
+++ b/sites/all/themes/saw/style.css
@@ -396,7 +396,7 @@ td#home a:hover img, td#home a:link img, td#home a:visited img {
 }
 
 #home {
-  background: url("images/mlogo.png") no-repeat scroll right 20px transparent;
+  background: url("images/mlogo.png") no-repeat scroll 47px 20px transparent;
 	width: 25%;
 }
 .secondary-links, .secondary-links a:link, .secondary-links a:visited {
